fix work item image alignment

--- a/_sass/_work.sass
+++ b/_sass/_work.sass
@@ -18,7 +18,7 @@ body#work
 			box-shadow: 0 3px 5px rgba(0,0,0,.3)
 
 		.caption
-			margin-top: 150px
+			margin: 150px auto 0
 			text-shadow: none
 			@media #{$mobile}
 				margin-top: 70px
